feat(accounts): add maui for accounts

--- a/Presentation.Mvc/Views/Accounts/GetAccounts.cshtml
+++ b/Presentation.Mvc/Views/Accounts/GetAccounts.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<GetAllAccountsViewModel>
+﻿@using Queries
+@model IEnumerable<GetAllAccountsViewModel>
 
 @{
     ViewData["Title"] = "accounts";
