--- a/Persentation.MAUI/Components/Layout/NavMenu.razor
+++ b/Persentation.MAUI/Components/Layout/NavMenu.razor
@@ -23,5 +23,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> account list
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="transactions">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> transactions
+            </NavLink>
+        </div>
     </nav>
 </div>
